<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical"
    android:id="@+id/createReminderActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="93dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/nameTV"
            android:layout_width="50sp"
            android:layout_height="50sp"
            android:layout_weight="1"
            android:text="@string/name" />

        <EditText
            android:id="@+id/nameET"
            android:layout_width="300sp"
            android:layout_height="50sp"
            android:hint="Enter Reminder Name" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="81dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/medicineTV"
            android:layout_width="50sp"
            android:layout_height="50sp"
            android:layout_weight="1"
            android:text="@string/medicine" />

        <EditText
            android:id="@+id/medicineET"
            android:layout_width="300sp"
            android:layout_height="50sp"
            android:hint="Enter Medicine Name" />
    </LinearLayout>

    <CalendarView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/expandable_calendar_view"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="81dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dateTV"
            android:layout_width="50sp"
            android:layout_height="50sp"
            android:layout_weight="1"
            android:text="@string/date" />
        <EditText
            android:id="@+id/editTextDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="date"
            android:hint="Enter Reminder Date"
            android:focusable="false"/>
    </LinearLayout>
    <TimePicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/expandable_time_picker"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="81dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/timeTV"
            android:layout_width="50sp"
            android:layout_height="50sp"
            android:layout_weight="1"
            android:text="@string/time" />
        <EditText
            android:id="@+id/editTextTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="time"
            android:hint="Enter Reminder Time"
            android:focusable="false"/>
    </LinearLayout>
    <Button
        android:id="@+id/uploadImgBtn"
        android:layout_width="1dp"
        android:layout_height="1dp"
        android:layout_gravity="center"
        android:text="Upload Image" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="1dp"
        android:layout_height="200dp"
        app:srcCompat="@drawable/upload_image" />

    <Button
        android:id="@+id/submitBtn"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="submit" />

</LinearLayout>